--- a/index.Rmd
+++ b/index.Rmd
@@ -117,9 +117,9 @@ ___
 1.3 What is Github?
 
 **2 Git and Github Fundamentals**  
-> 2.1 Setup and Installtion  
+> 2.1 Setup and Installation  
 2.2 Authentication  
-2.3 Repositories (aka Repos)
+2.3 Repositories (aka Repos)  
 2.4 The Standard Git Workflow
   
 **3 Advanced Git and Github Functionalities**  
@@ -146,7 +146,7 @@ knitr::include_graphics("http://phdcomics.com/comics/archive/phd101212s.gif")
 - Mastering Git helps you improve your data science workflow, in particular in collaborative settings.<br><br> 
 - Github enables you to showcase your own work and skills publicly.<br><br> 
 - Releasing source code and data via Github reflects important open science principles (e.g., accessibility and reproducibility).<br><br>
-- Your assignments will be distributed and must be handed-in via Github. We can track your progress and help you along the way.
+- Your assignments will be distributed and handed-in via Github. Also, we can track your progress and help you along the way.
 
 .footnote[
 _Src: [phdcomics](http://phdcomics.com)_
@@ -164,14 +164,16 @@ knitr::include_graphics("https://git-scm.com/images/logo@2x.png")
 ```
 
 ### 1.2 What is Git?
-[Git](https://git-scm.com/) is a decentralized **version control system** (VCS) that helps you track changes of your files (e.g., data, figues, documents, code) over time. Comparable to Word's "track changes" feature, only more powerful. It grants you access to your entire file history and let's you roll-back to previous versions of your files.
+[Git](https://git-scm.com/) is a decentralized **version control system** (VCS) that helps you track changes of your files (e.g., data, figues, documents, code) over time. Comparable to Word's "track changes" feature, only more powerful. It organizes your entire file history and let's you roll-back to previous versions of your files.
+
+--
 
 ```{r, echo=F, out.width='20%', out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://pbs.twimg.com/profile_images/1414990564408262661/r6YemvF9_400x400.jpg")
 ```
 
 ### 1.3 What is Github?
-[GitHub](https://github.com/) is a platform that let's you host and distribute Git-based projects publicly (as such, it largely complements Git). It enables remote collaboration on these projects and is particularly popular among developers and data scientists. Other people can contribute to your code base, while you can also contribute to other projects.
+[GitHub](https://github.com/) is a platform that let's you host and distribute Git-based projects publicly. It enables remote collaboration on these projects and is particularly popular among developers and data scientists. Other people can contribute to your code base, while you can also contribute to other projects.
 
 While Git is essentially a software that runs locally on your computer, Github is a web-service which let's you share your files and projects with others remotely.
 
@@ -180,7 +182,9 @@ keep track of:
 - what has changed
 - who has changed it
 - when was it changed
-your collaborator may be your future self
+
+- your collaborator may be your future self
+- Github essentially complements Git
 
 ---
 
@@ -195,7 +199,7 @@ knitr::include_graphics("./img/github-corona-warn-app.png")
 ---
 
 ## 2 Git and Github Fundamentals
-### 2.1 Setup and Installtion
+### 2.1 Setup and Installation
 
 Install the [Git Client](https://git-scm.com/) on your local machine and create a [Github](https://github.com/) account. In case you struggle with one of the setup steps, refer to [Happy Git and GitHub for the useR, ch. 4-6](https://happygitwithr.com/github-acct.html).
 
@@ -214,7 +218,7 @@ In the following, we will see all examples in the context of the RStudio IDE as 
 
 When you use Git for the first time, you must introduce yourself to Git (i.e. choose a username and mail-address with which you authenticate yourself). If your credentials conform with your Github credentials, Git and Github will be linked.
 
-**1. Step:** Run in the terminal (i.e. using the git CLI)
+**1. Step:** Run in the terminal (i.e. using the Git CLI)
 
 ```
 git config --global user.name <username>
@@ -222,12 +226,11 @@ git config --global user.email <email>
 git config --global --list
 ```
 
+--
+
 **2. Step:** Create a personal access token (PAT)
 
-Create a [personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token) on Github with which you login instead of your Github password (token-based authentication mandatory as of [July 2020](https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/)). Use this token as passwort whenever your are prompted by Git to enter your username and password!
-
-???
-
+Create a [personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token) on Github with which you login instead of your Github password (token-based authentication is mandatory as of [July 2020](https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/)). Use this token as passwort whenever your are prompted by Git to enter your username and password!
 
 ---
 
@@ -238,7 +241,7 @@ Repositories are directories (i.e. folders) of files that are managed by Git. Us
 
 **Repository for this presentation:**
 ```{r}
-list.files("C:/Users/s_scho53/Desktop/L09_Desktop/workshops/git-and-github")
+list.files("C:/Users/s_scho53/Desktop/L09_Desktop/workshops/git-and-github", all.files = T)
 ```
 
 ---
@@ -258,7 +261,7 @@ git init
 git remote add origin <remote url>
 git remote -v
 ```
-*Note: Here `origin` is the "shortname" of the remote repository. You can use any other name instead, however, `origin` is the Git default and hence works nicely out of the box.*
+Here, `origin` is the "shortname" of the remote repository. You can use any other name instead, however, `origin` is the Git default and hence works nicely out of the box.
 ]
 .panel[.panel-name[Remote First (Clone)]
 **Cloning:** Create a local copy of your Github repo, make changes and apply changes to your remote repo.
@@ -269,22 +272,19 @@ git remote -v
 git clone <remote url>
 git remote -v
 ```
-*Note: `git clone` automatically links your local and remote repository, i.e. no need to use `git remote add`.*
+`git clone` automatically links your local and remote repository so that there is no need to use `git remote add`.
 ]
 .panel[.panel-name[Remote First (Fork)]
 **Forking:** Create a copy of someone else's repo in your Github account, make changes locally without affecting the original repo and then propose your own changes to the original repo.
 ]
 ]
 
-???
-- show cloning step in terminal as well as RStudio IDE
-
 ---
 
 ## 2 Git and Github Fundamentals
 ### 2.4 The Standard Git Workflow
 
-**Make Changes:** Make local changes to your repository (e.g., add new files, delete files, rename files or edit files). These changes are not yet reflected in your remote Github repo! Check changes using `git status`.
+**Make Changes:** Make local changes to your repository (e.g., add new files, delete files, rename files or edit files). These changes are not yet reflected in your remote Github repo!
 
 **Commit Changes:** A *commit* creates a snapshot of your repository, i.e. it records the current state of all the files included in your repo.
 
@@ -311,14 +311,14 @@ git commit -m "enter meaningful commit message"
 knitr::include_graphics("https://happygitwithr.com/img/commit-diff-sha-tag.png")
 ```
 
-**Commit history**: The sequence of commits over time determines the commit history (stored in your repos `.git` folder).
+**Commit history**: The sequence of commits over time is represented by the commit history (stored in your repo's `.git` folder).
 
-Every commit is accompanied by a commit message as well as a SHA hash which unique identifies each commit.
+Every commit is accompanied by a commit message as well as a SHA hash which uniquely identifies each commit.
 
-**Diff:** A diff records the differences between two commits (i.e. repository snapshots). The most recent state of your repository and files is hence an accumulation of the initial commit plus any number of diffs.
+**Diff:** A diff records the differences between two commits (i.e. repository snapshots). The most recent state of your repository is hence an accumulation of the contents of your initial commit plus any number of diffs.
 
 .footnote[
-*Note: Git mostly works with plain text files (e.g., `.md`, `.Rmd`, `.R`, `.md`, `.html`, etc.). It won't be able to track changes in binary files such as Word documents, Excel spreadsheets, PDF files or images.*
+*Note: Git mostly works with plain text files (e.g., `.md`, `.Rmd`, `.R`, `.md`, `.html`, etc.). It won't be able to track diffs between binary files such as Word documents, Excel spreadsheets, PDF files or images.*
 ]
 
 ---
@@ -350,16 +350,16 @@ main is the name of the default branch
 knitr::include_graphics("./img/git-github-relation.png")
 ```
 
-**Pull Changes:** Pulling is essentially the opposite of `git push`, it let's you download recent changes (e.g., submitted and pushed commits by your collaborators) and update your local repo. 
+**Pull Changes:** Pulling is essentially the complement of `git push`, it let's you download recent changes (e.g., submitted and pushed commits by your collaborators) and update your local repo. 
 
 ```
 # fetch the new updates from the remote
 git fetch origin
 
 # merge the changes into your local repo
-git merge origin/master master
+git merge origin/main master
 
-# or use the pull shortcut for fetch + merge
+# or use the pull shortcut to fetch + merge
 git pull origin master
 ```
 Usually, using simply `git pull` will be sufficient since you have already established the connection between your local and remote repository.
@@ -370,7 +370,7 @@ Usually, using simply `git pull` will be sufficient since you have already estab
 
 ???
 - each user has an own version of the repo locally
-- Github acts as the central node for holding the master version of the repo---
+- Github acts as the central node for holding the master version of the repo
 
 ---
 
@@ -388,7 +388,7 @@ Branching enables you to deviate from the main code base to
 - experiment with new ideas without breaking the code base,
 - create a back-up of your code base.
 
-This is particularly useful if you are working in a time and would like to work on your code in parallel (e.g., different people working on different features or tasks).
+This is particularly useful if you are working in a team and would like to work on your code in parallel (e.g., different people working on different features or tasks).
 
 .pull-right[.pull-right[.footnore[
 *Src: [noble desktop](https://www.nobledesktop.com/learn/git/git-branches)*
@@ -402,7 +402,7 @@ This is particularly useful if you are working in a time and would like to work 
 .panelset[
 .panel[.panel-name[Create New Branch]
 ```
-git branch experimention
+git branch experimentation
 
 git branch -v
 ```
@@ -411,7 +411,7 @@ git branch -v
 >   experimentation <commit SHA> <commit message>
 > * master          <commit SHA> <commit message>
 ```
-Note that the default branch of your local repository is called `master`. In contrast, when you create a remote Github repository, the default branch is called `main`. The `*` here indicates the current branch, aka `HEAD`).
+Note that the default branch of your local repository is called `master`. In contrast, when you create a remote Github repository, the default branch is called `main`. The `*` indicates the current branch, aka `HEAD`.
 ]
 .panel[.panel-name[Switch Branches]
 ```
@@ -436,7 +436,7 @@ git checkout master
 git merge experimentation
 ```
 
-Merges can be made between branches in the same repo as well as between original and forked repositories. The latter type of merges go by the name of **pull requests** (you request for the changes in your fork to be integrated in the original repository).
+Merges can be made between branches in the same repo as well as between original and forked repositories. The latter type of merge goes by the name of **pull request** (you request for the changes in your fork to be "pulled" into the original repository).
 ]
 ]
 
@@ -467,13 +467,13 @@ Merge conflicts must be resolved manually by a new commit, which either selects 
 
 Merge conflicts are easier to prevent if
 - you avoid working on the exact same code sections,
-- you commit and push changes and pull changes by other regularly (*commit-pull-push workflow*).
+- you commit, pull and push changes regularly (*commit-pull-push* paradigm).
 
 --
 
 ### 3.3 When `r emo::ji("pile_of_poo")` Hits the Fence
 
-Almost certainty, you will come to a frustrating point where you messed something up in your Git history. Unless you would like to go down the (extremely technical) rabbit hole of solving it using plain Git, you may keep the following points in mind: 
+Almost certainly, you will come to a frustrating point where you messed something up in your Git history. Unless you desire to go down the (extremely technical) rabbit hole of solving it using plain Git, you may keep the following points in mind: 
 
 - As long as you have not pushed your changes to Github, the remote repo will still be clean!
 - As a last resort, you can always make a local copy of your repo, clone the remote, and start off new.
@@ -487,13 +487,13 @@ Almost certainty, you will come to a frustrating point where you messed somethin
 ## 3 Advanced Git and Github Functionalities
 ### 3.4 File Tracking
 
-By default, if your run `git add .`, Git will stage all changes for the next commit. Oftentimes, however, you don't want Git to track all files in your repository and have the uploaded to the remote:
+By default, if you run `git add .`, Git will stage all changes for the next commit. Oftentimes, however, you don't want Git to track all files in your repository and have them uploaded to the remote:
 - Archived files
 - User-specific settings
 - Privacy-sensitive files
-- Plain notes
+- Preliminary notes
 
-Use the special `.gitignore` file to specify which files you would like to exclude from tracking and uploading to Github. You can exclude individual files or entire directories.
+Use the special `.gitignore` file in your repository to specify which files you would like to exclude from tracking and uploading to Github. You can exclude individual files as well as entire directories.
 
 .footnote[
 *Note: `.gitignore` templates are available [online](https://github.com/github/gitignore) for the most popular projects types and programming languages.* 
@@ -525,3 +525,6 @@ in the assignments, you will be able to use issues and assign them to us if you 
 
 
 **Bryan, J./Hester, J./The STAT 545 TAs (2021):** Happy Git and GitHub for the useR. URL: https://happygitwithr.com/.
+
+**Bryan, J. (2018):** Excuse Me, Do You Have a Moment to Talk About Version Control?. The American Statistician, Vol. 72, 2018, No. 1, pp. 20-27.
+
